# FretHMM

./: .gitignore  LICENSE  README.md  README_zh.md  build_exe.py  frethmm.spec  pyhammi.spec  pyproject.toml
docs/: FretHMM-refactor-plan.md
frethmm/: __init__.py
frethmm/app/: __init__.py  cli.py  gui.py  i18n.py
frethmm/core/: __init__.py  batch.py  io.py  model.py  postprocess.py
frethmm/domain/: __init__.py  models.py
frethmm/formats/: __init__.py  report_parser.py
frethmm/legacy/: __init__.py  report_parser.py
frethmm/viz/: __init__.py  review_grid.py  tdp.py
pyhammi/: __init__.py  batch.py  cli.py  config.py  gui.py  i18n.py  io.py  model.py  postprocess.py  tdp.py
tests/: test_golden.py  test_io.py  test_review_grid.py
tests/fixtures/: Values1_classified.csv  Values1_summary.json  Values2_hashes.json
