[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhammi"
version = "0.1.0"
description = "Python rewrite of HaMMy: Hidden Markov Model analysis for single-molecule FRET trajectories"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "hmmlearn>=0.3.0",
    "matplotlib>=3.7",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
gui = ["pyinstaller>=6.0"]

[project.scripts]
pyhammi = "pyhammi.cli:main"
pyhammi-gui = "pyhammi.gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyhammi*"]
