[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frethmm"
version = "0.3.0"
description = "FretHMM: Hidden Markov Model state classification for single-molecule trajectories"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "hmmlearn>=0.3.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
gui = ["pyinstaller>=6.0"]

[project.scripts]
frethmm = "frethmm.app.cli:main"
frethmm-gui = "frethmm.app.gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["frethmm*"]
